# mcp-claude-db-query-demo

./: .env.example  README.md  db_query_server.py  pyproject.toml
client/: client.py
